// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should render correctly with component in content prop 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r5:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement bottom 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rk:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement left 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rc:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement right 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rg:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement top 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r8:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with required props 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r0:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with required props and visible 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r1:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement large 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r18:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement medium 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r14:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement small 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r10:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with variant should renders tooltip with placement default 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":ro:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with variant should renders tooltip with placement primary 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rs:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;
